# connect_4

./: .gitignore  README.md
backend/: .env.docker  .pre-commit-config.yaml  makefile  pyproject.toml
backend/src/: core.py  main.py
backend/src/api/: fields.py  validators.py  views.py
backend/src/connect_4/: settings.py
backend/src/db/: utils.py
backend/tests/: test_core.py
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/games/[id]/: page.tsx
frontend/src/app/games/[id]/join/: page.tsx
